<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Other Features Section Header -->
    <item
        android:id="@+id/nav_other_features"
        android:title="@string/nav_other_features"
        android:checkable="false"
        android:enabled="false" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_favorite" />
            
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history" />
            
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/nav_feedback" />
            
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/nav_contact" />
    </group>

    <!-- Account Section Header -->
    <item
        android:id="@+id/nav_account"
        android:title="@string/nav_account"
        android:checkable="false"
        style="@style/SectionHeaderStyle"
        android:enabled="false" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_change_password"
            android:title="@string/nav_change_password" />
            
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/nav_sign_out"/>
    </group>

</menu>